--- a/public/assest/css/style.css
+++ b/public/assest/css/style.css
@@ -1,4 +1,3 @@
-
 /*** Spinner Start ***/
 /*** Spinner ***/
 #spinner {
@@ -84,165 +83,10 @@
     background: var(--bs-primary);
     border: 1px solid var(--bs-primary);
 }
+/*** Button End ***/
+
 /*** Topbar Start ***/
 
-/*** Navbar ***/
-.navbar-light .navbar-nav .nav-link {
-    position: relative;
-    margin-right: 25px;
-    padding: 35px 0;
-    color: var(--bs-white);
-    font-size: 17px;
-    font-weight: 400;
-    outline: none;
-    transition: .5s;
-}
-
-.sticky-top.navbar-light .navbar-nav .nav-link {
-    padding: 20px 0;
-    color: var(--bs-dark);
-}
-
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-    color: var(--bs-primary);
-}
-
-.navbar-light .navbar-brand img {
-    max-height: 60px;
-    transition: .5s;
-}
-
-.sticky-top.navbar-light .navbar-brand img {
-    max-height: 45px;
-}
-
-.navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 600;
-    vertical-align: middle;
-    margin-left: 8px;
-}
-
-.dropdown .dropdown-menu a:hover {
-    background: var(--bs-primary);
-    color: var(--bs-white);
-}
-
-.navbar .nav-item:hover .dropdown-menu {
-    transform: rotateX(0deg);
-    visibility: visible;
-    background: var(--bs-light);
-    transition: .5s;
-    opacity: 1;
-}
-
-@media (max-width: 991.98px) {
-    .sticky-top.navbar-light {
-        position: relative;
-        background: var(--bs-white);
-    }
-
-    .navbar.navbar-expand-lg .navbar-toggler {
-        padding: 10px 20px;
-        border: 1px solid var(--bs-primary);
-        color: var(--bs-primary);
-    }
-
-    .navbar-light .navbar-collapse {
-        margin-top: 15px;
-        border-top: 1px solid rgba(0, 0, 0, .08);
-    }
-
-    .navbar-light .navbar-nav .nav-link,
-    .sticky-top.navbar-light .navbar-nav .nav-link {
-        padding: 10px 0;
-        margin-left: 0;
-        color: var(--bs-dark);
-    }
-
-    .navbar-light .navbar-brand img {
-        max-height: 45px;
-    }
-}
-
-@media (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
-        display: block;
-        visibility: hidden;
-        top: 100%;
-        transform: rotateX(-75deg);
-        transform-origin: 0% 0%;
-        border: 0;
-        border-radius: 10px;
-        transition: .5s;
-        opacity: 0;
-    }
-
-    .navbar-light {
-        position: absolute;
-        width: 100%;
-        top: 0;
-        left: 0;
-        border-top: 0;
-        border-right: 0;
-        border-bottom: 1px solid;
-        border-left: 0;
-        border-style: dotted;
-        z-index: 999;
-    }
-    
-    .sticky-top.navbar-light {
-        position: fixed;
-        background: var(--bs-light);
-        border: none;
-    }
-
-    .navbar-light .navbar-nav .nav-item::before {
-        position: absolute;
-        content: "";
-        width: 0;
-        height: 2px;
-        bottom: -1px;
-        left: 50%;
-        background: var(--bs-primary);
-        transition: .5s;
-    }
-
-    .sticky-top.navbar-light .navbar-nav .nav-item::before {
-        bottom: 0;
-    }
-
-    .navbar-light .navbar-nav .nav-item::after {
-        content: "";
-        position: absolute;
-        bottom: 1px;
-        left: 50%;
-        transform: translateX(-50%);
-        border: 10px solid;
-        border-color: transparent transparent var(--bs-primary) transparent;
-        opacity: 0;
-        transition: 0.5s;
-    }
-
-    .navbar-light .navbar-nav .nav-item:hover::after,
-    .navbar-light .navbar-nav .nav-item.active::after {
-        bottom: 1px;
-        opacity: 1;
-    }
-
-    .navbar-light .navbar-nav .nav-item:hover::before,
-    .navbar-light .navbar-nav .nav-item.active::before {
-        width: calc(100% - 2px);
-        left: 1px;
-    }
-
-    .navbar-light .navbar-nav .nav-link.nav-contact::before {
-        display: none;
-    }
-}
 /*** Carousel Hero Header Start ***/
 .carousel-header {
     position: relative;
@@ -278,7 +122,6 @@
     border-top-right-radius: 50px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 50px;
-
 }
 
 .carousel .carousel-control-next .carousel-control-next-icon {
@@ -397,13 +240,6 @@
     }
 }
 
-.modal .modal-header {
-    height: 100px;
-}
-
-#searchModal .modal-content {
-    background: rgba(255, 255, 255, .6);
-}
 /*** Carousel Hero Header End ***/
 
 /*** Single Page Hero Header Start ***/
@@ -432,7 +268,6 @@
     }
 }
 /*** Single Page Hero Header End ***/
-
 
 /*** Features Start ***/
 .feature .feature-item {
@@ -476,388 +311,6 @@
 }
 /*** Features End ***/
 
-/*** About Start ***/
-.about .about-img {
-    position: relative;
-    padding-bottom: 30px;
-    margin-top: 30px; 
-    margin-left: 30px;
-}
-
-.about .about-img::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 10px;
-    top: -30px;
-    right: 0;
-    border-radius: 10px;
-    background: var(--bs-secondary);
-
-}
-
-.about .about-img::after {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 100%;
-    left: -30px;
-    bottom: 30px;
-    border-radius: 10px;
-    background: var(--bs-secondary);
-}
-
-.about .about-img .about-exp {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 25px;
-    font-size: 30px;
-    font-weight: bold;
-    background: var(--bs-secondary);
-    color: var(--bs-white);
-    border: 1px solid var(--bs-secondary);
-    margin-top: -30px;
-    margin-left: -30px;
-    border-radius: 10px;
-}
-/*** About End ***/
-
-/*** Service Start ***/
-.service-item {
-    position: relative;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
-}
-
-.service-item::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    left: 0;
-    bottom: 0;
-    border-radius: 10px;
-    background: var(--bs-primary);
-    transition: 0.5s;
-    z-index: 1;
-}
-
-.service-item:hover::after {
-    width: 100%;
-    height: 100%;
-}
-
-.service-item:hover .service-content,
-.service-item:hover .service-btn {
-    position: relative;
-    z-index: 2;
-}
-
-.service-item .service-content a,
-.service-item .service-content p {
-    transition: 0.5s;
-}
-
-.service-item:hover .service-content a:hover {
-    color: var(--bs-secondary);
-}
-
-.service-item:hover .service-content p {
-    color: var(--bs-white);
-} 
-
-.service-item .service-btn {
-    width: 80px;
-    height: 80px;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--bs-primary);
-    transition: 0.5s;
-}
-
-.service-item .service-btn i {
-    transition: 0.5s;
-}
-
-.service-item:hover .service-btn {
-    background: var(--bs-white);
-}
-
-.service-item:hover .service-btn i {
-    transform: rotate(360deg);
-    color: var(--bs-primary) !important;
-}
-/*** Service End ***/
-
-
-/*** Counter Start ***/
-.counter {
-    position: relative;
-    overflow: hidden;
-    background: linear-gradient(rgba(25, 64, 154, 0.9), rgba(25, 64, 154, 1)), url(../img/fact-bg.jpg);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.counter .counter-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.counter .counter-item .counter-item-icon {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    background: var(--bs-primary);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-}
-/*** Counter End ***/
-
-
-/*** Products Start ***/
-.product .product-item {
-    border: 1px solid rgba(196, 211, 211, 0.9);
-    border-radius: 10px;
-}
-
-/*** Products End ***/
-
-/*** Blog Start ***/
-.blog .blog-item {
-    border-radius: 10px;
-    background: var(--bs-light);
-    transition: 0.5s;
-}
-
-.blog .blog-item:hover {
-    box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
-}
-
-.blog .blog-item .blog-img {
-    position: relative;
-    overflow: hidden;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.blog .blog-item .blog-img::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    transition: 0.5s;
-    z-index: 1;
-}
-
-.blog .blog-item .blog-img img {
-    transition: 0.5s;
-}
-
-.blog .blog-item:hover .blog-img img {
-    transform: scale(1.2);
-}
-
-.blog .blog-item:hover .blog-img::after {
-    background: rgba(0, 209, 249, 0.2);
-}
-
-.blog .blog-item .blog-date {
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    border-radius: 10px;
-    background: var(--bs-primary);
-    color: var(--bs-white);
-    z-index: 2;
-}
-
-.blog .blog-item .blog-content a {
-    transition: 0.5s;
-}
-
-.blog .blog-item:hover .blog-content a:hover {
-    color: var(--bs-primary) !important;
-}
-/*** Blog End ***/
-
-/*** Team Start ***/
-.team .team-item {
-    position: relative;
-    overflow: hidden;
-    background: var(--bs-white);
-    border: 1px solid var(--bs-secondary);
-    border-radius: 10px;
-}
-
-.team .team-item .team-inner {
-    transition: 0.5s;
-}
-.team .team-item:hover .team-inner {
-    box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
-}
-
-.team .team-item .team-inner .team-img {
-    position: relative;
-    z-index: 2;
-}
-
-.team .team-item .team-inner .team-img::after {
-    content: "";
-    width: 100%;
-    height: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background: rgba(0, 209, 249, 0.2);
-    transition: 0.5s;
-    z-index: 3;
-}
-
-.team .team-item:hover .team-inner .team-img::after {
-    height: 100%;
-}
-
-.team .team-item .team-inner .team-img .team-share {
-    position: absolute;
-    left: 10px;
-    bottom: 10px;
-    transition: 0.5s;
-    z-index: 2;
-}
-
-.team .team-item:hover .team-inner .team-img .team-share {
-    opacity: 0;
-}
-
-.team .team-item .team-inner .team-img .team-icon {
-    position: absolute;
-    bottom: 0;
-    left: -100%;
-    border-bottom-left-radius: 0 !important; 
-    border-top-left-radius: 0 !important;
-    display: inline-flex;
-    background: var(--bs-primary);
-    transition: 0.5s;
-    z-index: 4;
-}
-
-.team .team-item:hover .team-inner .team-img .team-icon { 
-    left: -25px; 
-}
-/*** Team End ***/
-
-
-/*** testimonial Start ***/
-.testimonial .owl-nav .owl-prev {
-    position: absolute;
-    top: -58px;
-    right: 0;
-    background: var(--bs-primary);
-    color: var(--bs-white);
-    padding: 5px 30px;
-    border-radius: 30px;
-    transition: 0.5s;
-}
-
-.testimonial .owl-nav .owl-prev:hover {
-    background: var(--bs-secondary);
-    color: var(--bs-white);
-}
-
-.testimonial .owl-nav .owl-next {
-    position: absolute;
-    top: -58px;
-    right: 88px;
-    background: var(--bs-primary);
-    color: var(--bs-white);
-    padding: 5px 30px;
-    border-radius: 30px;
-    transition: 0.5s;
-}
-
-.testimonial .owl-nav .owl-next:hover {
-    background: var(--bs-secondary);
-    color: var(--bs-white);
-}
-
-.testimonial-carousel .owl-dots {
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-.testimonial-carousel .owl-dots .owl-dot {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    margin-right: 15px;
-    border: 1px solid var(--bs-secondary);
-    background: var(--bs-primary);
-    transition: 0.5s;
-}
-
-.testimonial-carousel .owl-dots .owl-dot.active {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    border: 1px solid var(--bs-primary);
-    background: var(--bs-secondary) !important;
-    transition: 0.5s;
-}
-
-.testimonial-carousel .owl-dots .owl-dot span {
-    position: relative;
-    margin-top: 50%;
-    margin-left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.testimonial-carousel .owl-dots .owl-dot span::after {
-    content: "";
-    width: 8px;
-    height: 8px;
-    border-radius: 8px;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background: var(--bs-white);
-}
-
-@media (max-width: 992px) {
-    .owl-carousel.testimonial-carousel {
-        padding-top: 30px;
-    }
-
-    .testimonial .owl-nav .owl-prev,
-    .testimonial .owl-nav .owl-next {
-        top: -30px;
-    }
-}
-/*** testimonial End ***/
-
 /*** Footer Start ***/
 .footer {
     background: var(--bs-dark);
@@ -898,5 +351,3 @@
     background: var(--bs-dark);
 }
 /*** copyright end ***/
-
-
